--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
+img {
+    height: 11.2em;
+    width: 8em;
+}
+
+.gallery {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10em;
+    height: 12em;
+}
+
+.card-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.5em;
+    padding: 0.5em;
+}
+
+.card {
+    margin: 0.5em;
+    padding: 0;
+}
+
+.button-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.win-reason {
+    display: flex;
+    margin-top: 2em;
+    height: 5em;
+    width: 100%;
+    justify-content: center;
+}
+
+.winner {
+    background-color: green;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    font-family: sans-serif;
+    justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.scoreboard {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #fff;
+    margin-left: 3em;
+    margin-right: 3em;
+    margin-top: 3em;
+    border-radius: 1em;
+    width: 52em;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.score-value {
+    display: flex;
+    justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.leading {
+    color: green;
 }
